# kotlineer

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: architecture.md  cli.md  library.md  mcp.md  quickstart.md  use-cases.md
scripts/: render_homebrew_formula.py
src/kotlineer/: __init__.py  __main__.py  cli.py  client.py  connection.py  documents.py  mcp_server.py  process.py  types.py  utils.py
src/kotlineer/services/: __init__.py  code_actions.py  completion.py  diagnostics.py  formatting.py  hierarchy.py  hover.py  jetbrains_extensions.py  kotlin_extensions.py  navigation.py  refactoring.py  symbols.py
tests/: test_cli.py  test_client.py  test_connection.py  test_documents.py  test_mcp_server.py  test_services.py  test_types.py
